--- a/jobs/templates/jobs/projects.html
+++ b/jobs/templates/jobs/projects.html
@@ -12,10 +12,10 @@
         <div class="container py-5">
             <h1 class="text-center">Portfolio</h1>
 
-            <div class="row py-5">
+            <div class="row pt-3">
                 {% for job in latest_jobs.all %}
                     <div class="col-md-4 job-display">
-                        <a href="{% url 'job_detail' job.slug %}">
+                        <a href="{% url 'job_detail' job.url_slug %}">
                             <img class="img-fluid overlay-image" src="{{ job.portfolio_image.url }}">
                             <div class="overlay-middle">
                                 <h3 class="h5 font-weight-bold">{{ job.title }}</h3>
