--- a/jobs/templates/jobs/keyword-wrapper.html
+++ b/jobs/templates/jobs/keyword-wrapper.html
@@ -9,7 +9,7 @@
     <main role="main">
 
         <section class="header pt-5 text-center container">
-            <h1 class="text-center audiowide pb-2">{{ job.title }}</h1>
+            <h1 class="text-center pb-2">{{ job.title }}</h1>
         </section>
 
         <section class="container py-3">
@@ -23,7 +23,7 @@
 
                     <hr class="my-4">
 
-                    <div class="row justify-content-center pb-4">
+                    <div class="row justify-content-left pb-4 pl-3">
                         <div class="text-center">
                             Number of combinations:
                             <select id="combination-select" aria-label="Number of combinations">
