--- a/jobs/templates/jobs/projects.html
+++ b/jobs/templates/jobs/projects.html
@@ -9,23 +9,37 @@
 
     <main role="main">
 
-        <div class="container py-5">
+        <div class="container pt-5">
             <h1 class="text-center">Portfolio</h1>
 
-            <div class="row pt-3">
-                {% for job in latest_jobs.all %}
-                    <div class="col-md-4 job-display">
-                        <a href="{% url 'job_detail' job.url_slug %}">
-                            <img class="img-fluid overlay-image" src="{{ job.portfolio_image.url }}">
-                            <div class="overlay-middle">
-                                <h3 class="h5 font-weight-bold">{{ job.title }}</h3>
-                                <p>{{ job.summary }}</p>
+{#            <div class="row pt-3">#}
+{#                {% for job in latest_jobs.all %}#}
+{#                    <div class="col-md-4 job-display">#}
+{#                        <a href="{% url 'job_detail' job.url_slug %}">#}
+{#                            <img class="img-fluid overlay-image" src="{{ job.portfolio_image.url }}">#}
+{#                            <div class="overlay-middle">#}
+{#                                <h3 class="h5 font-weight-bold">{{ job.title }}</h3>#}
+{#                                <p>{{ job.summary }}</p>#}
+{#                            </div>#}
+{#                        </a>#}
+{#                    </div>#}
+{#                {% endfor %}#}
+{#            </div>#}
+            <div class="row pt-4">
+                        {% for job_info in job_data %}
+                            <div class="col-md-6 pb-3">
+                                <a href="{% url 'job_detail' job_info.job.url_slug %}">
+                                    <div class="job-display">
+                                        <img class="img-fluid overlay-image" src="{{ job_info.image.url }}">
+                                        <div class="overlay-middle">
+                                            <h3 class="h5 font-weight-bold">{{ job_info.job.title }}</h3>
+                                            <p>{{ job_info.job.summary }}</p>
+                                        </div>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
+                        {% endfor %}
                     </div>
-
-                {% endfor %}
-            </div>
         </div>
 
 
