--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -38,6 +38,9 @@
     <!-- Self canonical -->
     <link rel="canonical" href="{{ CANONICAL_PATH }}"/>
 
+    {% block head_info %}
+    {% endblock %}
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
