--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -1,7 +1,8 @@
-<!doctype html>
+{% load static %}
+
+<!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}George Christie Development{% endblock %}</title>
@@ -21,7 +22,7 @@
 
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 
     <!-- Favicon -->
