Haven't committed for a while

--- a/contact/templates/contact/thanks_page.html
+++ b/contact/templates/contact/thanks_page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'pages/_base.html' %}
 
 {% block title %}Thanks | George Christie Development{% endblock %}
 
