--- a/jobs/templates/jobs/job_detail.html
+++ b/jobs/templates/jobs/job_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'pages/_base.html' %}
 {% load staticfiles %}
 
 {% block title %}{{ job.title }} | George Christie Development{% endblock %}
