--- a/jobs/templates/jobs/portfolio.html
+++ b/jobs/templates/jobs/portfolio.html
@@ -1,30 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'pages/_base.html' %}
 
 {% block title %}Portfolio | George Christie Development{% endblock %}
 
-
 {% block content %}
-
-    {#    {% load staticfiles %}#}
 
     <main role="main">
 
         <div class="container pt-5">
             <h1 class="text-center">Portfolio</h1>
 
-{#            <div class="row pt-3">#}
-{#                {% for job in latest_jobs.all %}#}
-{#                    <div class="col-md-4 job-display">#}
-{#                        <a href="{% url 'job_detail' job.url_slug %}">#}
-{#                            <img class="img-fluid overlay-image" src="{{ job.portfolio_image.url }}">#}
-{#                            <div class="overlay-middle">#}
-{#                                <h3 class="h5 font-weight-bold">{{ job.title }}</h3>#}
-{#                                <p>{{ job.summary }}</p>#}
-{#                            </div>#}
-{#                        </a>#}
-{#                    </div>#}
-{#                {% endfor %}#}
-{#            </div>#}
             <div class="row pt-4">
                         {% for job_info in job_data %}
                             <div class="col-md-6 pb-3">
