--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'pages/_base.html' %}
 {% load crispy_forms_tags %}
 
 {% block title %}Contact | George Christie Development{% endblock %}
