--- a/pages/templates/pages/_base.html
+++ b/pages/templates/pages/_base.html
@@ -83,7 +83,7 @@
                     {#                <a class="nav-item nav-link" href="{% static 'resume.pdf' %}" target="_blank">Resume</a>#}
                     {#                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>#}
                     <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url 'projects' %}">Portfolio</a>
+                    <a class="nav-item nav-link" href="{% url 'portfolio' %}">Portfolio</a>
                     <a class="nav-item nav-link" href="{% url 'contact' %}">Contact</a>
                 </div>
             </div>
