--- a/portfolio/static/css/style.css
+++ b/portfolio/static/css/style.css
@@ -11,10 +11,6 @@
     --text-primary-color: #212529;
 }
 
-@font-face {
-    font-family: Calibri;
-}
-
 html {
     scroll-behavior: smooth;
     position: relative;
@@ -26,17 +22,6 @@ body {
     font-family: 'Raleway', sans-serif;
     color: var(--text-primary-color);
     margin-bottom: 106px;
-}
-
-h1, h2 {
-    font-family: 'Merriweather', serif;
-    text-transform: lowercase;
-    text-align: center;
-}
-
-a, a:hover {
-    text-decoration: none;
-    color: inherit;
 }
 
 footer {
@@ -69,6 +54,37 @@ footer .icon-box:hover {
     transform: scale(0.9);
 }
 
+h1, h2 {
+    font-family: 'Merriweather', serif;
+    text-transform: lowercase;
+    text-align: center;
+}
+
+a, a:hover {
+    text-decoration: none;
+    color: inherit;
+}
+
+input {
+    border-radius: 0 !important;
+}
+
+@media (max-width: 768px) {
+    .home-hero h1 {
+        font-size: 1.5rem;
+    }
+
+    .home-bio {
+        text-align: center;
+    }
+}
+
+@media (max-width: 992px) {
+    .sep-left {
+        border: 0;
+    }
+}
+
 .no-indent-ul {
     list-style-position: inside;
     padding-left: 0;
@@ -76,12 +92,6 @@ footer .icon-box:hover {
 
 .sep-left {
     border-left: 1px grey solid;
-}
-
-@media (max-width: 992px) {
-    .sep-left {
-        border: 0;
-    }
 }
 
 .p-mb-0 p {
@@ -127,69 +137,43 @@ footer .icon-box:hover {
     color: white;
 }
 
-input {
-    border-radius: 0 !important;
-}
-
-.btn-custom {
-    display: inline-block;
-    font-size: 10pt;
-    background-color: var(--accent-color);
-    color: #fff;
-    padding: 8px 12px;
-    text-align: center;
-    font-weight: 600;
-    transition: 0.3s;
-}
-
-.btn-custom i {
-    font-size: 10pt;
-    vertical-align: middle;
-}
-
 .btn-custom:hover {
     background-color: var(--main-bg-color);
     color: var(--accent-color);
 }
 
-.raleway {
-    font-family: 'Raleway', sans-serif;
-    text-transform: none;
-}
-
 /* The hero image */
-.webp .hero {
+.home-hero {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono.webp");
-
+    text-align: center;
 
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-.no-webp .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono-compressed.jpg");
+.webp .home-hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/pages/images/desert-mono.webp");
 }
 
-/*.webp .hero {*/
-    /*background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono.webp");*/
-/*}*/
+.no-webp .home-hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/pages/images/desert-mono-compressed.jpg");
+}
 
-.top-half {
-    height: 100vh;
-    background-color: var(--dark-bg-color);
-    /*background-image: url("/static/desert-mono.jpg");*/
+.home-hero h1 {
+    font-family: 'Raleway', sans-serif;
+    text-transform: none;
+    font-size: 2rem;
+    color: white;
+}
+
+.home-portfolio {
+    background-color: var(--secondary-bg-color);
 }
 
 .navbar-custom {
     background-color: var(--darker-bg-color);
-}
-
-.portfolio-section {
-    background-color: var(--secondary-bg-color);
 }
 
 .overlay-image {
@@ -218,10 +202,6 @@ input {
     background-color: white;
 }
 
-.job-display a {
-    color: #212529;
-}
-
 .job-display:hover .overlay-image {
     opacity: 0;
 }
@@ -235,15 +215,7 @@ input {
     padding: 0 10px;
 }
 
-@media (max-width: 768px) {
-    .hero h1 {
-        font-size: 1.5rem;
-    }
 
-    #home-bio {
-        text-align: center;
-    }
-}
 
 
 
