--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,6 +1,5 @@
 {% extends 'pages/_base.html' %}
 
-{% load webp_converter %}
 {% load static %}
 
 {% block head_info %}
@@ -46,7 +45,7 @@
             <h2>About</h2>
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-6 col-lg-4 py-3 text-center">
-                    <img class="img" src="{% static_webp 'pages/images/bio-pic-round-300.png' %}"
+                    <img class="img" src="{% static 'pages/images/bio-pic-round-300.png' %}"
                          alt="George Christie"/>
                 </div>
                 <div class="col-md-6 col-lg-4">
